--- a/server/package.json
+++ b/server/package.json
@@ -5,14 +5,15 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"nodemon index.js",
-    "build":"npm i && npm i -g nodemon"
+    "start": "nodemon index.js",
+    "build": "npm i && npm i -g nodemon"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.6.3",
     "nodemon": "^3.0.1"
