--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js",
-    "build": "npm i && npm install nodemon --save"
+    "build": "npm update -g && npm i"
   },
   "keywords": [],
   "author": "",
