--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start": "npm run vite dev",
+    "start": "vite",
     "dev": "vite",
     "build": "npm run vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
