--- a/client/package.json
+++ b/client/package.json
@@ -39,6 +39,7 @@
     ]
   },
   "devDependencies": {
-    "eslint-plugin-react": "^7.33.2"
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-refresh": "^0.4.3"
   }
 }
